--- a/index.html
+++ b/index.html
@@ -8,11 +8,41 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet" /> n
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/CSS/normalize.css" />
     <link rel="stylesheet" href="/CSS/style.css" />
 </head>
 
-<body></body>
+<body>
+    <section class="card">
+        <div class="container">
+            <img class="card__image" src="/images/image-header-mobile.jpg" alt="" />
+            <div class="card__content__container">
+                <div class="card__content">
+                    <h2 class="card__content__heading">
+                        Get <span class="insight">insights</span> that help your business grow
+                    </h2>
+                    <div class="card__content__text">
+                        Discover the benefits of data of analytics and make beter decisions regarding revenue , customer experience and overall efficience
+                    </div>
+                </div>
+                <div class="card__likes">
+                    <div class="likes">
+                        <h3 class="likes__headings">10K+</h3>
+                        <p class="likes__text">COMPANIES</p>
+                    </div>
+                    <div class="likes">
+                        <h3 class="likes__headings">314</h3>
+                        <p class="likes__text">TEMPLATES</p>
+                    </div>
+                    <div class="likes">
+                        <h3 class="likes__headings">12M+</h3>
+                        <p class="likes__text">QUERIES</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</body>
 
 </html>
